# Debian-Download-Manager

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROGRESS.md  README.md  docs_http_client_choice.md  job-logs.txt  rust-toolchain.toml
.github/workflows/: ci.yml
crates/ddm-cli/: Cargo.toml
crates/ddm-cli/src/: cli.rs  main.rs
crates/ddm-cli/src/cli/: control_socket.rs  mod.rs  tests.rs
crates/ddm-cli/src/cli/commands/: add.rs  bench.rs  checksum.rs  import_har.rs  mod.rs  pause.rs  remove.rs  resume.rs  run.rs  status.rs
crates/ddm-cli/src/cli/tests/: add_run.rs  mod.rs  rest.rs
crates/ddm-core/: Cargo.toml
crates/ddm-core/src/: checksum.rs  config.rs  control.rs  downloader.rs  fetch_head.rs  host_policy.rs  lib.rs  logging.rs  resolver.rs  resume_db.rs  scheduler.rs  segmenter.rs  storage.rs
crates/ddm-core/src/bench/: mod.rs
crates/ddm-core/src/downloader/: mod.rs  run.rs  segment.rs  single.rs
crates/ddm-core/src/downloader/multi/: handler.rs  mod.rs  refill.rs  result.rs  run.rs
crates/ddm-core/src/downloader/run/: unbounded.rs
crates/ddm-core/src/fetch_head/: mod.rs  parse.rs
crates/ddm-core/src/har/: mod.rs  parse.rs  resolve.rs
crates/ddm-core/src/host_policy/: entry.rs  key.rs  mod.rs  persist.rs  state.rs
crates/ddm-core/src/host_policy/state/: adaptive.rs  mod.rs  snapshot.rs  tests.rs
crates/ddm-core/src/resume_db/: db.rs  mod.rs  tests.rs  types.rs
crates/ddm-core/src/resume_db/jobs/: mod.rs  read.rs  write.rs
crates/ddm-core/src/retry/: classify.rs  error.rs  mod.rs  policy.rs  run.rs
crates/ddm-core/src/safe_resume/: mod.rs  validate.rs
crates/ddm-core/src/safe_resume/validate/: error.rs  mod.rs  tests.rs
crates/ddm-core/src/scheduler/: budget.rs  choose.rs  execute.rs  mod.rs  parallel.rs  progress.rs  run.rs
crates/ddm-core/src/scheduler/execute/: finish.rs  guard.rs  invoke.rs  mod.rs  progress_worker.rs  run_download.rs  setup.rs  single.rs
crates/ddm-core/src/scheduler/run/: common.rs  fallback.rs  mod.rs  shared.rs  single.rs
crates/ddm-core/src/segmenter/: bitmap.rs  mod.rs  range.rs
crates/ddm-core/src/storage/: builder.rs  mod.rs  writer.rs
crates/ddm-core/src/url_model/: content_disposition.rs  mod.rs  path.rs  sanitize.rs
crates/ddm-core/tests/: integration_range_download.rs
crates/ddm-core/tests/common/: mod.rs  range_server.rs
docs/progress/: ARCHIVE.md  PROGRESS_FULL_2026-02-11.md  PROGRESS_FULL_2026-02-11.part2.md
src/: checksum.rs  cli.rs  config.rs  fetch_head.rs  har_resolver.rs  lib.rs  logging.rs  main.rs  resume_db.rs  url_model.rs
