[package]
name = "ddm-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["DDM Contributors"]
description = "Command-line interface for the DDM segmented download manager."

[[bin]]
name = "ddm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"
tracing = "0.1"

ddm-core = { path = "../ddm-core" }

# Async runtime for CLI commands that hit the DB/engine.
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }


