[package]
name = "ddm-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["DDM Contributors"]
description = "Core engine for the DDM segmented download manager."

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

# Config & serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# XDG paths for config/state (Debian-friendly)
xdg = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

