[package]
name = "ddm-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["DDM Contributors"]
description = "Core engine for the DDM segmented download manager."

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

# Config & serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# XDG paths for config/state (Debian-friendly)
xdg = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# HTTP client (HEAD probe; multi interface later for downloader)
curl = "0.4"

# Persistence
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# Async runtime (used by sqlx and for tokio::fs in resume_db)
tokio = { version = "1.37", features = ["fs", "rt-multi-thread", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }


